--- a/style.css
+++ b/style.css
@@ -5,37 +5,64 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    background-color: #17191C;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+ul {
+    list-style-type: none;
+}
+
+ul li,
+a {
+    text-decoration: none;
 }
 
 .wrapper {
-    background: url(./img/bg_head.jpg) center top/100% repeat;
-    /* background: url(./img/bg_bottom.jpg) center center/cover no-repeat; */
+    margin: 21px 0 57px;
 }
+
 .container {
     position: relative;
     width: 1140px;
     margin: 0 auto;
-    padding: 21px 0 57px;
-    
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     max-height: 129px;
-    
-    
+
+
 }
 
-.menu__list .menu__item {
-    display: inline-block;
-    margin: 21px 27px 0;
+.container .menu {
+    margin-top: 21px;
+}
+
+.menu .menu__list {
+    min-width: 264px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu__item .menu__link {
+    font-style: normal;
+    font-weight: normal;
     font-size: 14px;
+    line-height: 19px;
     color: #FFFFFF;
+    text-decoration: none;
 }
 
-.menu__list .menu__item:hover {
+.menu__item .menu__link:hover {
+    cursor: pointer;
+    color: #DA0100;
+}
+
+.menu__item .menu__link:active {
     cursor: pointer;
     color: #DA0100;
 }
@@ -47,22 +74,20 @@ body {
 .contacts .contacts__phone {
     color: #FFFFFF;
     font-size: 26px;
-    line-height: 35px;
     text-decoration: none;
     font-style: normal;
 }
 
-.contacts .contacts__workdays {
+.contacts .contacts__dropdown-title {
     color: #FFF;
     text-decoration: underline;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
-    line-height: 20px;
     text-align: right;
 }
 
-.contacts .contacts__workdays:hover {
+.contacts .contacts__dropdown-title:hover {
     color: #FF3D00;
     cursor: pointer;
 }
@@ -94,23 +119,24 @@ body {
 }
 
 .head__main .main__btn-info {
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
     text-align: center;
     margin: 43.5px auto 0;
-}
-
-.main__btn-info {
     width: 195px;
     height: 55px;
     border: 18px solid #FF3D00;
     background: #FF3D00;
     border-radius: 35px;
+    color: #FFFFFF;
 }
 
 .main__btn-info:hover {
     cursor: pointer;
     background: #DA0100;
     border: 18px solid #DA0100;
-} 
+}
 
 .main__btn-info a {
     display: block;
@@ -147,8 +173,9 @@ body {
     color: #000000;
 }
 
-.services__block .services__title{
+.services__block .services__title {
     margin-top: 30px;
+    font-size: 32px;
 }
 
 .services__block .services__peoples {
@@ -183,7 +210,10 @@ body {
     color: #666666;
 }
 
-.services__more-info button {
+.services__more-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 198px;
     height: 55px;
     margin-top: 29px;
@@ -198,7 +228,7 @@ body {
     color: #FF5500;
 }
 
-.services__more-info button:hover {
+.services__more-info:hover {
     background: #FF5500;
     color: #FFF;
     cursor: pointer;
@@ -230,14 +260,13 @@ body {
     background: url(./img/nap/camera.jpg) center/cover no-repeat;
     max-width: 557px;
     height: 394px;
-    padding: 0 83px 15px 28px;
+    padding: 0 83px 26px 30px;
 }
 
-.nap__promo .nap__date{
+.nap__promo .nap__date {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 21px;
     color: #FFFFFF;
 }
 
@@ -246,12 +275,11 @@ body {
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
-    line-height: 36px;
     color: #FFFFFF;
 }
 
 .nap__promo .nap__info {
-    margin-top: 8px;
+    margin-top: 4px;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -272,7 +300,7 @@ body {
 
 .paginator .paginator__display {
     display: flex;
-    margin-right: 36px;
+    margin-right: 24px;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -281,7 +309,7 @@ body {
     align-items: center;
 }
 
-.paginator__list .paginator__item{
+.paginator__list .paginator__item {
     display: flex;
     list-style-type: none;
     font-style: normal;
@@ -296,7 +324,7 @@ body {
     justify-content: center;
 }
 
-.paginator__list .paginator__item:hover{
+.paginator__list .paginator__item:hover {
     cursor: pointer;
     width: 32px;
     height: 32px;
@@ -308,27 +336,29 @@ body {
 }
 
 .paginator__list .paginator__item:nth-child(2n) {
-    margin: 0 2px 0;
+    margin: 0 1.9px 0;
 }
 
-.page-content .about-us {
+.main-content .about-us {
     margin-top: 221px;
     position: relative;
-    height: 730px;
+    height: 559px;
 }
 
 .about-us .about-us__block {
     position: absolute;
-    padding: 70px 202px 66px 81px;
+    padding: 70px 206px 66px 78.5px;
     width: 785px;
     height: 455px;
     background: #FFFFFF;
     border-radius: 5px;
     z-index: 2;
     right: 0;
+    top: 20px;
 }
 
-.about-us__block .about-us__title{font-style: normal;
+.about-us__block .about-us__title {
+    font-style: normal;
     font-weight: 800;
     font-size: 36px;
     line-height: 49px;
@@ -337,15 +367,19 @@ body {
 }
 
 .about-us__block .about-us__text {
-    margin-top: 37px;
+    margin-top: 38px;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 27px;
     color: #060606;
 }
+
 .about-us__block .about-us__btn {
-    margin-top: 43px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 44px;
     width: 168px;
     height: 55px;
     background: #FF5400;
@@ -361,15 +395,17 @@ body {
 
 .about-us__block .about-us__btn:hover {
     cursor: pointer;
+    background-color: #DA0100;
 }
 
 .about-us .about-us__img {
     position: absolute;
-    top: -97px;
+    top: -76px;
     z-index: 1;
 }
 
 .footer {
+    margin-top: 16px;
     display: flex;
     justify-content: space-between;
     align-items: center
@@ -381,7 +417,15 @@ body {
     justify-content: space-between;
 }
 
-.footer__menu_list .footer__menu_item {
+.footer .footer__logo {
+    margin-right: 125px;
+}
+
+.footer .footer__menu {
+    margin-right: 110px;
+}
+
+.footer__menu_list .menu_item .menu__link {
     list-style: none;
     font-style: normal;
     font-weight: normal;
@@ -390,9 +434,13 @@ body {
     color: #FFFFFF;
 }
 
-.footer__menu_list .footer__menu_item:hover {
+.footer__menu_list .footer__menu_item .menu__link:hover {
     cursor: pointer;
     color: #DA0100;
+}
+
+.footer .social {
+    margin-right: 72px;
 }
 
 .social .social__list {
@@ -402,11 +450,7 @@ body {
     align-items: center;
 }
 
-.social__list .social__item {
-    list-style: none;
-}
-
-.social__list .social__item:hover {
+.social__item .social__link:hover {
     cursor: pointer;
 }
 
@@ -417,6 +461,7 @@ body {
     line-height: 20px;
     color: #9A9A9A;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .footer__contacts .contacts__phone {
@@ -427,4 +472,11 @@ body {
     color: #FFFFFF;
     text-decoration: none;
     margin-top: 6.5px;
+}
+
+.footer .footer__contacts {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: flex-end;
 }
