добавил overflox-x в body

--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -9,6 +9,7 @@ body {
     background-color: #17191C;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
 }
 
 .wrapper {
