Исправил paginator, по PerfectPixel - все правильно

--- a/css/blocks/about-us.css
+++ b/css/blocks/about-us.css
@@ -7,7 +7,7 @@
 .about-us .about-us__block {
     position: absolute;
     padding: 71px 206px 66px 79px;
-    width: 785px;
+    max-width: 785px;
     min-height: 455px;
     background: #FFFFFF;
     border-radius: 5px;
