--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -1,5 +1,7 @@
 .header .contacts {
-    margin: 10px 0 0;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
 }
 
 .contacts .contacts__phone {
@@ -28,7 +30,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 11px;
-    line-height: 20px;
     color: #9A9A9A;
     text-decoration: none;
     white-space: nowrap;
@@ -38,7 +39,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 26px;
-    line-height: 20px;
     color: #FFFFFF;
     text-decoration: none;
     margin-top: 6.5px;
@@ -49,4 +49,5 @@
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: flex-end;
+    padding-top: 6.5px;
 }
