--- a/css/blocks/social.css
+++ b/css/blocks/social.css
@@ -1,8 +1,9 @@
 .footer .social {
-    margin-right: 68px;
+    display: flex;
 }
 
 .social .social__list {
+    margin-left: 41px;
     display: flex;
     min-width: 174px;
     justify-content: space-between;
