--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -10,6 +10,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    height: 100%;
 }
 
 .wrapper {
@@ -46,5 +47,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 main {
-    min-height: calc(100vh - 80px);
+    min-height: calc(100vh - 146px);
 }
