--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -1,5 +1,5 @@
 .footer .container {
-    margin-top: 15px;
+    margin: 15px auto 57px;
     display: flex;
     justify-content: space-between;
     align-items: center;
