--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -9,3 +9,22 @@
     line-height: 65px;
     color: #1A1B1E;
 }
+
+.partners__blocks {
+    margin-top: 73px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.partners__blocks .partners__block {
+    margin-top: 70px;
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+}
+
+.partners__blocks .partners__block:first-child {
+    margin-top: 0;
+}
