Footer в Услугах лежал криво. Исправил.

--- a/css/blocks/breadcrumbs.css
+++ b/css/blocks/breadcrumbs.css
@@ -4,8 +4,9 @@
     text-align: center;
 }
 
-.breadcrumbs .breadcrumbs__item--active {
+.breadcrumbs .breadcrumbs__item--active a {
     font-weight: bold;
+    cursor: default;
 }
 
 .breadcrumbs__item a {
