--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,4 @@
 @import url(./blocks/breadcrumbs.css);
 @import url(./blocks/main-services.css);
 @import url(./blocks/partners.css);
+@import url(./blocks/welcome.css);
