Продолжаю верстать Отзывы

--- a/css/blocks/paginator.css
+++ b/css/blocks/paginator.css
@@ -11,6 +11,13 @@
     flex: 1;
 }
 
+.main-reviews .paginator {
+    margin-top: 71px;
+    display: flex;
+    justify-content: center;
+    flex: 1;
+}
+
 .paginator .paginator__list {
     display: flex;
     justify-content: flex-start;
@@ -70,10 +77,14 @@
     margin: 0 1.9px 0;
 }
 
-.main-services .paginator__item-black {
+.paginator .paginator__item-black {
     color: #000000;
 }
 
-.main-services .paginator__item-black.paginator__item_active {
+.paginator__list .paginator__item-black:hover {
+    color: #FFF;
+}
+
+.paginator__item-black.paginator__item_active {
     color: #FFF;
 }
