--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,4 @@
 @import url(./blocks/main-services.css);
 @import url(./blocks/partners.css);
 @import url(./blocks/welcome.css);
+@import url(./blocks/main-reviews.css);
