--- a/css/blocks/page-wrapper.css
+++ b/css/blocks/page-wrapper.css
@@ -5,3 +5,7 @@
 .services-page-wrapper {
  background: url(/img/services__page/bg.jpg) center top no-repeat;
 }    
+
+/* .reviews-page-wrapper {
+
+} */
