Почти доделал форму

--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,6 @@
 @import url(./blocks/partners.css);
 @import url(./blocks/welcome.css);
 @import url(./blocks/main-reviews.css);
+@import url(./blocks/section-sale.css);
+@import url(./blocks/section-feedback.css);
+@import url(./blocks/form.css);
