--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,4 @@
 @import url(./blocks/section-sale.css);
 @import url(./blocks/section-feedback.css);
 @import url(./blocks/form.css);
+@import url(./blocks/hover-transition.css)
