Сделал выпадающее меню

--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -11,14 +11,16 @@
     font-style: normal;
 }
 
-.contacts .contacts__dropdown-title {
+.contacts__dropdown-title {
+    display: flex;
+    justify-content: flex-end;
     color: #FFF;
     text-decoration: underline;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
     text-align: right;
-    margin-top: -2px;
+    margin-top: 2px;
 }
 
 .contacts .contacts__dropdown-title:hover {
