--- a/css/blocks/welcome.css
+++ b/css/blocks/welcome.css
@@ -18,6 +18,7 @@
     margin: 0 auto;
     height: 100vh;
     animation: uprise 2s ease;
+    animation-fill-mode: forwards;
     /* transition: cubic-bezier(.15,-0.33,.79,1.28); */
 }
 
