--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -1,3 +1,7 @@
+.form {
+    margin-top: 56px;
+}
+
 .form__row {
     display: flex;
     margin-bottom: 26px;
@@ -13,6 +17,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
+    line-height: 25px;
     align-items: center;
     color: #1A1B1E;
 }
@@ -38,6 +43,7 @@
     font-size: 13px;
     align-items: center;
     color: #303030;
+    line-height: 18px;
 }
 
 .controls__elem {
@@ -56,37 +62,45 @@
     display: flex;
     justify-content: flex-end;
     flex: 1;
-    margin-bottom: 33px;
+    margin-bottom: 20px;
 }
 
 .form__controls-title {
     flex-wrap: nowrap;
+    margin-top: 8px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    color: #1A1B1E;
 }
 
 .controls {
     display: flex;
     flex: 1;
     justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
-    margin-left: 71px;
+    margin-left: 74px;
 }
 
 .controls__item {
     margin-bottom: 10px;
-    margin-right: 13px;
 }
 
-.controls__item:nth-child(1n+6) {
+.controls__item:nth-child(7) {
+    display: flex;
     margin-bottom: 0;
+    justify-self: flex-start;
+    flex: 0.98;
 }
 
 .btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 198px;
+    width: 166px;
     min-height: 55px;
-    margin-top: 30px;
     border-radius: 35px;
     font-style: normal;
     font-weight: bold;
