--- a/css/blocks/main-reviews.css
+++ b/css/blocks/main-reviews.css
@@ -3,6 +3,7 @@
     padding: 94px 0 65px;
     display: flex;
     justify-content: space-between;
+    min-height: 1415px;
 }
 
 .main-reviews__blocks {
@@ -11,6 +12,7 @@
     flex-direction: column;
     justify-content: flex-start;
     justify-content: space-between;
+    align-content: space-between;
     flex-wrap: wrap;
 }
 
