--- a/css/blocks/paginator.css
+++ b/css/blocks/paginator.css
@@ -12,7 +12,9 @@
 }
 
 .main-reviews .paginator {
-    margin-top: 71px;
+    margin-bottom: 22px;
+    margin-left: 9px;
+    margin-top: 122px;
     display: flex;
     justify-content: center;
     flex: 1;
