--- a/css/blocks/dropdown.css
+++ b/css/blocks/dropdown.css
@@ -1,5 +1,9 @@
 .dropdown {
     position: relative;
+    /* width: 157px; */
+    display: inline-flex;
+    justify-content: flex-end;
+    /* display: block; */
 }
 
 .dropdown:hover .dropdown__menu {
@@ -15,21 +19,19 @@
     border-bottom-color: #fff;
     position: absolute;
     bottom: 100%;
-    right: 10px;
+    right: 40px;
     /* margin-left: 30px; */
 }
 
 .dropdown__menu::after {
     content: "";
     display: block;
-    width: 10;
-    height: 10;
+    width: 74px;
+    height: 0px;
     border: 11px solid transparent;
-    display: block;
     position: absolute;
     right: 0;
-    left: 0;
-    top: -25%;
+    top: -14%;
 }
 
 .dropdown__menu {
@@ -41,8 +43,8 @@
     background: #FFF;
     opacity: 0.8;
     mix-blend-mode: normal;
-    width: 157px;
-    height: 77px;   
+    /* width: 157px; */
+    /* height: 77px;    */
     border-radius: 9px;
     display: none;
 }
