--- a/css/blocks/main-reviews.css
+++ b/css/blocks/main-reviews.css
@@ -10,8 +10,8 @@
     max-height: 1291px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    justify-content: space-between;
+    /* justify-content: flex-start;
+    justify-content: space-between; */
     align-content: space-between;
     flex-wrap: wrap;
 }
