--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(./layout/normalize.css);
 @import url(./layout/base.css);
 @import url(./blocks/header.css);
+@import url(./blocks/logo.css);
 @import url(./blocks/menu.css);
 @import url(./blocks/contacts.css);
 @import url(./blocks/page-wrapper.css);
