--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -24,7 +24,7 @@
     margin-top: 2px;
 }
 
-.contacts .contacts__dropdown-title:hover {
+.dropdown:hover .contacts__dropdown-title {
     color: #FF3D00;
     cursor: pointer;
 }
