теперь недоБЭМ, полноценный БЭМ :)
Исправил наименование классов на нормальное (по БЭМ)

--- a/css/blocks/main-reviews.css
+++ b/css/blocks/main-reviews.css
@@ -6,7 +6,7 @@
     min-height: 1415px;
 }
 
-.main-reviews__blocks {
+.main-reviews__feedbacks {
     max-height: 1291px;
     display: flex;
     flex-direction: column;
@@ -16,7 +16,7 @@
     flex-wrap: wrap;
 }
 
-.main-reviews__block {
+.main-reviews__feedback {
     display: flex;
     flex-direction: column;
     justify-self: flex-start;
@@ -24,50 +24,51 @@
     max-width: 557px;
     padding: 50px 30px 31.5px 31px;
     background: #E5E5E5;
+    min-height: 542px;
 }
 
-.main-reviews__block:nth-child(2n) {
+.main-reviews__feedback:nth-child(2n) {
     margin-bottom: 0;
 }
 
-.reviews__person--header {
+.feedback__header {
     display: flex;
 }
 
-.person--name-link {
+.person-info__name-link {
     margin-top: 32px;
     display: flex;
     align-items: center;
 }
 
-.person--img {
+.header__img {
     margin-right: 22px;
 }
 
-.person--social {
+.person-info__social {
     margin-left: 7px;
 }
 
-.person--name {
+.person-info__name {
     font-weight: bold;
     font-size: 24px;
     line-height: 42px;
     color: #1A1B1E;
 }
 
-.person--name:hover {
+.person-info__name:hover {
     text-decoration-line: underline;
     color: #2E77A4;
 }
 
-.person--service {
+.person-info__service {
     display: inline-flex;
     padding: 10px 25px;
     background: #F2D4C9;
     border-radius: 35px;
 }
 
-.person--title {
+.feedback__title {
     margin-top: 27px;
     font-weight: bold;
     font-size: 30px;
@@ -75,7 +76,7 @@
     color: #202020;
 }
 
-.person--text {
+.feedback__text {
     margin-top: 12px;
     margin-bottom: 24.5px;
     font-weight: normal;
@@ -84,7 +85,7 @@
     color: #818181;
 }
 
-.person--time {
+.feedback__time {
     margin-top: auto;
     font-style: normal;
     font-weight: 600;
