--- a/css/blocks/section-feedback.css
+++ b/css/blocks/section-feedback.css
@@ -6,7 +6,7 @@
     padding: 79px 0 96px;
 }
 
-.give-feedback-title {
+.section-feedback__give-title {
     font-style: normal;
     font-weight: 800;
     font-size: 36px;
