Внес правки у paginator
добавил доп класс дисплею

--- a/css/blocks/paginator.css
+++ b/css/blocks/paginator.css
@@ -83,6 +83,10 @@
     color: #000000;
 }
 
+.paginator .paginator__display--black {
+    color: #000000;
+}
+
 .paginator__list .paginator__item--black:hover {
     color: #FFF;
 }
